# bbrl2

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
bbrl2/: __init__.py  _tensors.py  workspace.py
bbrl2/agents/: README.md  __init__.py  agent.py  asynchronous.py  dataloader.py  gyma.py  remote.py  seeding.py  utils.py
bbrl2/utils/: README.md  chrono.py  distributions.py  functional.py  logger.py  replay_buffer.py  utils.py
bbrl2/visu/: common.py  visu_critics.py  visu_histograms.py  visu_policies.py
